--- a/style.css
+++ b/style.css
@@ -25,3 +25,23 @@ header{
     display: inline-block;
     vertical-align: top;
 }
+
+.container{
+    width: 1000px;
+    margin: auto;
+    background-color: white;
+    padding: 40px;
+    border-radius: 10px;
+
+}
+
+.container.nav{
+    height: 70px;
+    margin-top: 30px;
+}
+
+.container.main{ 
+    height: 800px;
+    margin-top: 3px;
+    
+}
